تصحیح اینکود کردن url تغییر نام متد loadVideo به load

--- a/videoview/src/main/res/layout/exo_simple_player_view.xml
+++ b/videoview/src/main/res/layout/exo_simple_player_view.xml
@@ -30,7 +30,9 @@
     <ImageView android:id="@id/exo_artwork"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"/>
+        android:scaleType="fitCenter"
+        android:visibility="gone"
+        />
 
     <ImageView android:id="@+id/thumbnail"
         android:layout_width="match_parent"
